<resources>
    <string name="app_name">Practica2</string>
    <string name="correo">Correo:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrar">Registrar</string>
    <string name="repecontraseña">Repetir contraseña</string>
    <string name="miperfil">Mi perfil</string>
    <string name="cerrarSes">Cerrar sesión</string>

    <string name="facebook_app_id">1525918107453884</string>
    <string name="fb_login_protocol_scheme">fb119928942004743</string>
    <string name="principal">Principal</string>
    <string name="title_activity_class">ClassActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiar">Cambiar fragmento</string>
    <string name="title_activity_tabe">TabeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nombre">Nombre</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_notifications">camara</string>
    <string name="menu_search">buscar</string>
    <string name="menu_home">home</string>


</resources>
